# flask-typescript

./: .flaskenv  .gitignore  .pre-commit-config.yaml  .pylintrc  DEV.md  Makefile  README.md  pyproject.toml  tox.ini
app/: Makefile  app.py  bp.py  package.json  test_flask.py  tsconfig.json
app/orm/: models.py  models2.py  models3.py
app/templates/: index.html  index.js  index.ts  lib.ts  types.d.ts
flask_typescript/: __init__.py  __main__.py  api.py  cli.py  converter.py  dc.py  debug.py  json.py  preamble.py  preamble.ts  to_ts.py  types.py  typing.py  utils.py  zod.py  zod2.py
flask_typescript/devalue/: constants.py  parse.py
flask_typescript/endpoints/: flask_endpoints.py  ui.py
flask_typescript/orm/: flask_sqlalchemy.py  meta.py  mksqla.py  orm.py  pyd.py  pydantic.py.jinja  sqla2.py  sqla_typing.py  sqlalchemy.py.jinja  template.py.jinja  ui.py  utils.py
flask_typescript/unused/: converter.py  to_ts.py  zod1.py
tests/: test_api.py  test_converters.py  test_decoding.py  test_devalue.py  test_typescript.py
tests/resources/: tstext.ts
