[tool.poetry]
name = "flask-typescript"
version = "0.1.1"
description = ""
authors = ["arabidopsis <ian.castleden@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "flask_typescript"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.0"
flask = "^2.0.0"
sqlalchemy = {version="^2.0.12", optional=true}
flask-sqlalchemy = {version="^3.0.3", optional=true}

[tool.poetry.extras]
sqla = ["sqlalchemy", "flask-sqlalchemy"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.0"
jupyter = "^1.0.0"
python-dotenv = "^1.0.0"
fastapi = "^0.95.0"
mysqlclient = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
