[tool.poetry]
name = "flask-typescript"
version = "0.1.8"
description = ""
authors = ["arabidopsis <ian.castleden@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "flask_typescript" }]
include = [
    "flask_typescript/preamble.d.ts",
    "flask_typescript/py.typed",
    "flask_typescript/orm/template.py.jinja",
]
exclude = ["flask_typescript/unused/**"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0"
flask = "^2.0"
sqlalchemy = { version = "^2.0", optional = true }
# flask-sqlalchemy = { version = "^3.0.3", optional = true }

[tool.poetry.extras]
sqla = ["sqlalchemy"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.0"
jupyter = "^1.0.0"
python-dotenv = "^1.0.0"
mysqlclient = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
python_executable = ".venv/bin/python"
exclude = [
    '^fabfile\.py$',
    '^tests/.*',
    '^flask_typescript/unused/*',
    'test_.*\.py$',
]

[[tool.mypy.overrides]]
module = "app.*"
# strict = false # doesn't work
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_incomplete_defs = false
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
# strict = false # doesn't work
